src/ui/app/invocation/snapshots/proqi__ui__app__invocation__tests__contract__invocation_completion_shallow.snap
---
source: src/ui/app/invocation/tests.rs
assertion_line: 450
expression: "completion_snapshot(28, 6)"
---
00│┌ invocations and referen[x]│
01││›$pl                      ││
02││$plan        Project Skill││
03││$plugin       Global Skill││
04│└──────────────────────────┘│
05│  Esc Board  : Commands│
