src/ui/app/invocation/snapshots/proqi__ui__app__invocation__tests__contract__invocation_plan_starter.snap
---
source: src/ui/app/invocation/tests.rs
assertion_line: 440
expression: plan_completion_snapshot()
---
00││
01│┌ invocations and references ────────────────[x]│
02││›/pl                                          ││
03││/plan                           Shared Command││
04││                                              ││
05│└──────────────────────────────────────────────┘│
06│  Esc Board  : Commands  ? Shortcuts│
07│  → Codex   s Submit    S Submit & keep│
