src/ui/app/invocation/snapshots/proqi__ui__app__invocation__tests__contract__invocation_plan_starter@macos.snap
---
source: src/ui/app/invocation/tests.rs
assertion_line: 483
expression: plan_completion_snapshot()
---
00│⋮ /pl│
01│┌ discovered invocations ────────────────────[x]│
02││›/pl                                          ││
03││/plan                           Shared Command││
04││                                              ││
05│└──────────────────────────────────────────────┘│
06│  Esc Board│
07│  → Codex   Ctrl+Enter Submit│
